# bar-down-deals

./: .gitignore  Dockerfile  README.md  alembic.ini  api_path.pth  bauer.html  scrapy.cfg
.aws/: ecs-task-def.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: d435ed5f497b_init.py  eac705387062_init.py
alerts/: pyproject.toml
alerts/cron_jobs/: run_daily.sh  run_weekly.sh
alerts/src/: database.py  main.py  test.html
alerts/src/core/: alerts.py  config.py  database.py  logging.py  utils.py
alerts/src/templates/: email_template.html  email_template_old.html
api/: .dockerignore  Dockerfile  Dockerfile.old  alembic.ini  docker-compose.yml  init-letsencrypt.sh  main.py  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 060c6ea12c2f_init.py  0d6e3e1d9c10_add_price_col_to_stick.py  0eb1cf612c4f_add_discount_to_stick.py  0ede84b37eef_init.py  12de3682b041_add_ships_to_col_to_website.py  1ad319454ebb_add_price_drop_and_hist_low_col_to_stick.py  2644532c3485_price_url_unique_constraint.py  2b3561b1f754_discount_precision.py  2e488b97bb70_add_stickurl_table.py  48495a57707b_add_currency_col_to_deal.py  492edcd737c0_add_freq_col_to_useralert.py  49a28d6823cb_make_website_url_unique.py  51ef4ffc3418_remove_username_col.py  572c05d99f72_add_slug_col_to_stick.py  5eccd5279ba3_add_logo_col_to_website.py  83b759cc675f_add_currency_col_to_stick.py  8ad5761fcb3d_remove_frequency.py  93a91ce69655_add_flex_options_curve_options_to_stick.py  9b6ed1f0deb0_price_url_unique_constraint.py  a30d034e8736_add_stickimage_table.py  a7548c83b4b4_add_stick_tracking.py  b2af6962ea9f_add_deals_views_column.py  c8078a10c411_init.py  c8c57939c3bf_cascade_delete_useralert.py  ca0207d67f05_add_useralert.py  cb224b8ea314_add_freq_col_back.py  df8a0d53d42d_add_country_col_to_user.py  e0b78f3b6767_add_msrp_col_to_stick.py  e25b810e5077_add_description_kickpoint_col_to_sticks.py  e6829b94d607_add_exchangerate_table.py  ed650b97e668_add_size_brand_tag_col_to_useralert.py
api/core/: config.py  database.py  logging.py  security.py
api/nginx/: nginx.conf
api/src/: main.py
api/src/alerts/: models.py  repository.py  routes.py  service.py
api/src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/src/aws/: utils.py
api/src/categories/: categories.json  models.py  repository.py  routes.py  service.py  utils.py
api/src/core/: config.py  database.py  emails.py  exceptions.py  logging.py  security.py  tags.json  utils.py
api/src/core/templates/: reset_template.html  welcome_template.html
api/src/currencies/: models.py  repository.py  routes.py  service.py
api/src/deals/: models.py  repository.py  routes.py  schemas.py  service.py
api/src/products/: models.py  repository.py  routes.py  schemas.py  service.py
api/src/search/: models.py  repository.py  routes.py  service.py
api/src/sticks/: models.py  repository.py  routes.py  service.py
api/src/users/: models.py  repository.py  routes.py  service.py
frontend/: Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/nginx/: nginx.conf
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Accordian.tsx  (+17 more)
models/: deals.py  users.py
scraper/: README.md  crawl.py  database.py  items.py  lambda_function.py  models.py  pipelines.py  pyproject.toml  requirements.txt  scrapy.cfg  settings.py
scraper/expressions/: brands.json  ccmHockey.json  discountHockey.json  hockeyMonkey.json  hockeyShot.json  iceWarehouse.json  peranisHockeyWorld.json  pureHockey.json  tags.json
scraper/hockey_sales/: items.py  pipelines.py
scraper/hockey_sales/spiders/: hockeyMonkey.py
scraper/spiders/: hockeyMonkey.py
scraper/src/: database.py  items.py  middlewares.py  pipelines.py  settings.py  utils.py
scraper/src/spiders/: bauerHockey.py  bauerHockeyUS.py  ccmHockey.py  ccmHockeyCA.py  ccmHockeyUS.py  discountHockey.py  hockeyMonkey.py  hockeyMonkeyCA.py  hockeyMonkeyUS.py  hockeyShot.py  iceWarehouse.py  peranisHockeyWorld.py  polyGlideIce.py  proHockeyLife.py  pureGoalie.py  pureHockey.py
scrapers/: README.md  pyproject.toml
scrapers/cron_jobs/: crawl_sites.sh  crawl_sticks.sh
scrapers/site_scraper/: crawl.py
scrapers/site_scraper/expressions/: bauerHockeyUS.json  brands.json  hockeyMonkeyUS.json  peranisHockeyWorld.json  polyGlideIce.json  pureGoalie.json  tags.json
scrapers/site_scraper/src/: database.py  items.py  pipelines.py  settings.py  utils.py
scrapers/site_scraper/src/spiders/: bauerHockeyUS.py  ccmHockeyCA.py  ccmHockeyUS.py  discountHockey.py  hockeyMonkeyCA.py  hockeyMonkeyUS.py  hockeyShot.py  iceWarehouse.py  peranisHockeyWorld.py  polyGlideIce.py  proHockeyLife.py  pureGoalie.py  pureHockey.py
scrapers/stick_scraper/: crawl.py
scrapers/stick_scraper/expressions/: bauerHockeyUS.json  ccmHockeyUS.json  discountHockey.json  hockeyMonkeyCA.json  hockeyMonkeyUS.json  iceWarehouse.json  peranisHockeyWorld.json  proHockeyLife.json  pureHockey.json  sticks.json  url_map.json  urls.json
scrapers/stick_scraper/src/: add_stick.py  database.py  items.py  logging.py  middlewares.py  pipelines.py  settings.py  utils.py
scrapers/stick_scraper/src/spiders/: bauerHockeyUS.py  ccmHockeyCA.py  ccmHockeyUS.py  discountHockey.py  hockeyMonkeyCA.py  hockeyMonkeyUS.py  hockeyShot.py  iceWarehouse.py  peranisHockeyWorld.py  polyGlideIce.py  proHockeyLife.py  pureGoalie.py  pureHockey.py
web_scraper/: hockeyMonkey.json  hockeymonkey.html  icewarehouse.html  pureHockey.html  requirements.txt
web_scraper/web_scraper/: helpers.py  items.py  pipelines.py  settings.py
(+97 files in other folders)
