[project]
name = "alerts"
version = "0.1.0"
description = "Alerts module for BarDownDeals. Sends users nightly, weekly, or monthly emails for categories and keywords that they've signed up to be alerted for."
authors = [
    {name = "Jeremy Rico",email = "jeremy.rico35@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
