[project]
name = "scraper"
version = "0.1.0"
description = "Web scraper for Bar Down Deals"
authors = [
{name="Jeremy Rico", email="jeremy.rico35@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.18",
    "botocore>=1.36.18",
    "pillow>=11.1.0",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "pydantic-settings>=2.7.1",
    "scrapy>=2.12.0",
    "scrapy-user-agents>=0.1.1",
    "sqlalchemy>=2.0.38",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "chompjs (>=1.3.1,<2.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

